--- a/style-menu.css
+++ b/style-menu.css
@@ -148,7 +148,7 @@ height:100%;
 			font-weight: bold;
 			color: #FFE64D;
 			text-align: center;
-            font-family: 'Tomorrow', monospace;
+            font-family: serif;
             font-size:12px;
 			}
 			
