titles and shit

--- a/style-menu.css
+++ b/style-menu.css
@@ -204,6 +204,7 @@ height:100%;
 	right: 0;
 	border: 10px solid #99c1ff;
 	color: #99c1ff;
+    width: 200px;
     font-family: 'Tomorrow', monospace;
 
     }
