--- a/style-play.css
+++ b/style-play.css
@@ -4,19 +4,12 @@
             
 			body {
             background: url(images/background-dark.png); 
-			font-family: Courier New;
+                background-attachment: fixed;
+            font-family: Courier New;
 			color:white;
 			
 			}
-			
-			h2 {
-			font-family: Courier New;
-			text-align: center;
-			font-weight: bold;
-			font-size: 20px;
-			text-decoration: underline;
-			background-color: black;
-			}
+		
 			
 			a:link {
 			color:#99ffff;
@@ -49,18 +42,19 @@
 	text-align:center;
 	background-color: black;
 	color: #99c1ff;
+    font-family: 'Tomorrow', monospace;
     }
     
     .title {
-    font-family: Courier New;
+        font-family: 'PT Mono', monospace;
 		text-align: center;
 		font-weight: bold;
-		font-size: 20px;
+		font-size: 24px;
 		text-decoration: underline;
-		background-color: black;  
+		background-color: (0,0,0,0);  
 		position:relative;
-		width: 100%;
-		border: 10px solid black;
+		padding-top: 15px;
+        padding-bottom: 15px;
     }
     
 		
