--- a/style-play.css
+++ b/style-play.css
@@ -3,7 +3,7 @@
             }
             
 			body {
-            background: url(images/background-dark.png); 
+            background: url(images/ides-square.png); 
                 background-attachment: fixed;
             font-family: Courier New;
 			color:white;
@@ -72,6 +72,12 @@ top:0;
 left:20%;
 width:60%;
 height:60%;
+}
+
+.centerImage
+{
+ text-align:center;
+ display:block;
 }
 	
 }
