--- a/style-menu.css
+++ b/style-menu.css
@@ -100,10 +100,11 @@ height:100%;
 /* Styling, etc */
 				
             body {
-            background: url(images/ides-square.png); 
+            background: url('images/ides-square.png'); 
                background-attachment: fixed;
 			font-family: 'PT Mono', monospace;
 			color:white;
+            cursor: url('images/cursor.cur'), default;
 			}
 			
 			p {
