--- a/style-menu.css
+++ b/style-menu.css
@@ -91,7 +91,7 @@ overflow:hidden;
 
 .youtube-responsive-container iframe, 
 .youtube-responsive-container object, 
-.youtube-responsive-container embed {h
+.youtube-responsive-container embed {
 position:absolute;
 width:100%;
 height:100%;
