--- a/style-play.css
+++ b/style-play.css
@@ -47,6 +47,18 @@
     font-family: 'Tomorrow', monospace;
     }
     
+    #credit {
+    position:fixed;
+    bottom: 0;
+    right: 260px;
+    text-align: center;
+    font-family: 'Tomorrow', monospace;
+    font-size: 12px;
+    background-color: black;
+    color: white;
+    border: 8px solid black; 
+    }
+    
     .title {
         font-family: 'PT Mono', monospace;
 		text-align: center;
@@ -68,13 +80,18 @@ height:0;
 overflow:hidden;
 }
 
-.youtube-responsive-container iframe, .youtube-responsive-container object, .youtube-responsive-container embed {
+
+.youtube-responsive-container iframe, 
+.youtube-responsive-container object, 
+.youtube-responsive-container embed {
 position:absolute;
 top:0;
 left:20%;
 width:60%;
 height:60%;
 }
+
+
 
 .centerImage
 {
